objects/Genesys_Product_Prerequisite__c.object
<CustomObject>
    <description>Object holding prerequisite data for the Genesys Product object.  Links a Genesys Product to another Genesys Product that is a prerequisite for sale.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? Used to ensure the prerequisite validation is checked
Downstream Impact? Impacts quoting tool
Which department is owner? Product/Offer Mgmt &amp; Sales Ops</description>
        <label>Active ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Genesys_Product_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Genesys Product that owns this prerequisite relationship.</description>
        <inlineHelpText>The Genesys Product that owns this prerequisite relationship.</inlineHelpText>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Base_Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Prerequisites</relationshipLabel>
        <relationshipName>Prerequisites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the prerequisite is to be mandatory. Uncheck this box if the prerequisite is to be optional/conditional.</description>
        <inlineHelpText>Check this box if the prerequisite is to be mandatory. Uncheck this box if the prerequisite is to be optional/conditional.</inlineHelpText>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Quantity__c</fullName>
        <description>What it Does? Used to capture maximum quantity a quote product can have under a quote.
Downstream Impact? Impacts quoting tool
Which department is owner? Product/Offer Mgmt &amp; Sales Ops</description>
        <label>Max Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>What it Does? Error message displayed to users
Downstream Impact? Impacts quoting tool
Which department is owner? Product/Offer Mgmt &amp; Sales Ops</description>
        <label>Message</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Min_Quantity__c</fullName>
        <description>What it Does? Used to capture minimum quantity a quote product can have under a quote.
Downstream Impact? Impacts quoting tool
Which department is owner? Product/Offer Mgmt &amp; Sales Ops</description>
        <label>Min Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>What it Does? Stores the operator to perform validations on quantities
Downstream Impact? Impacts quoting tool
Which department is owner? Product/Offer Mgmt &amp; Sales Ops</description>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>less or equal</fullName>
                </value>
                <value>
                    <fullName>greater or equal</fullName>
                </value>
                <value>
                    <fullName>multiple</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>What it Does? Stores the type of order (New or Add-On) for which the validation should occur
Downstream Impact? Impacts quoting tool
Which department is owner? Product/Offer Mgmt &amp; Sales Ops</description>
        <label>Order Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Order_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <formula>Prerequisite_Product__r.APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? Used for validations for quote tool products
Downstream Impact? Impacts quoting tool
Which department is owner? Product/Offer Mgmt &amp; Sales Ops</description>
        <label>Prerequisite Product 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Base_Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Prerequisites (Prerequisite Product 2)</relationshipLabel>
        <relationshipName>Prerequisite2_Genesys_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Product3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What it Does? The Genesys Product that is a prerequisite item 3. Used for validations for quote tool products.
Downstream Impact? Used for validations under quote tool.
Which department is owner? Product/Offer Management &amp; Sales Ops</description>
        <label>Prerequisite Product 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Base_Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Prerequisites (Prerequisite Product 3)</relationshipLabel>
        <relationshipName>Prerequisites3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Product_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What does it do? Stores the 4th Prerequisite Product. 
Downstream Impact? Reporting. 
Which Department is Owner? IT/SalesOps</description>
        <label>Prerequisite Product 4</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected Product should not be of Base Item</errorMessage>
            <filterItems>
                <field>Product2.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Base_Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Prerequisites (Prerequisite Product 4)</relationshipLabel>
        <relationshipName>Prerequisites4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Product_5__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What does it do? Stores the 5th Prerequisite Product. 
Downstream Impact? Reporting. 
Which Department is Owner? IT/SalesOps</description>
        <label>Prerequisite Product 5</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Base_Item</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Prerequisites (Prerequisite Product 5)</relationshipLabel>
        <relationshipName>Prerequisites5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Product_6__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What does it do? Stores the 6th Prerequisite Product. 
Downstream Impact? Reporting. 
Which Department is Owner? IT/SalesOps</description>
        <label>Prerequisite Product 6</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Base_Item</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Prerequisites (Prerequisite Product 6)</relationshipLabel>
        <relationshipName>Prerequisites6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Product_Name__c</fullName>
        <formula>Prerequisite_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prerequisite Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Genesys Product that is a prerequisite item.</description>
        <inlineHelpText>The Genesys Product that is a prerequisite item.</inlineHelpText>
        <label>Prerequisite Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Base_Item</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Prerequisites (Prerequisite Product)</relationshipLabel>
        <relationshipName>Prerequisite_Genesys_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prerequisite_has_prerequisites__c</fullName>
        <label>Prerequisite has prerequisites?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Type__c</fullName>
        <description>What it Does? Stores different type of editions or products
Downstream Impact? Impacts quoting tool
Which department is owner? Product/Offer Mgmt &amp; Sales Ops</description>
        <label>Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Quote_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ratios__c</fullName>
        <label>Ratios</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sellable_Item_Product_SFDC_ID__c</fullName>
        <description>Field used to store the sfdc id of the corresponding Sellable Item Prerequisite object.  Used for MDM integration.  Do not modify or remove.</description>
        <externalId>true</externalId>
        <label>Sellable Item Product SFDC ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Skip_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What it Does? To skip validation if checked for renewal and amending
Downstream impact? Effects quoting process
Which department is owner? IT/SalesOps</description>
        <inlineHelpText>Check to skip this prerequisite validation when renewing or amending.</inlineHelpText>
        <label>Skip Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supported_Versions__c</fullName>
        <inlineHelpText>The supported versions of the prerequisite item.</inlineHelpText>
        <label>Supported Versions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Version Specific</fullName>
                </value>
                <value>
                    <fullName>Or Higher</fullName>
                </value>
                <value>
                    <fullName>Or Earlier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>What it Does? Stores tier for which validation should occur
Downstream Impact? Impacts quoting tool
Which department is owner? Product/Offer Mgmt &amp; Sales Ops</description>
        <label>Tier</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Tier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>What it Does? Stores the type of validation checks
Downstream Impact? Impacts quoting tool
Which department is owner? Product/Offer Mgmt &amp; Sales Ops</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quantity Range</fullName>
                </value>
                <value>
                    <fullName>Dependency</fullName>
                </value>
                <value>
                    <fullName>Quantity Comparison</fullName>
                </value>
                <value>
                    <fullName>Ratio</fullName>
                </value>
                <value>
                    <fullName>Mandatory Product</fullName>
                </value>
                <value>
                    <fullName>Restrict Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Prerequisite</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Quote_Type__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Tier__c</columns>
        <columns>Message__c</columns>
        <columns>Genesys_Product_Master__c</columns>
        <columns>Prerequisite_Product__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PCC</fullName>
        <columns>NAME</columns>
        <columns>Quote_Type__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Type__c</columns>
        <columns>Tier__c</columns>
        <columns>Message__c</columns>
        <columns>Genesys_Product_Master__c</columns>
        <columns>Prerequisite_Product__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quote_Type__c</field>
            <operation>equals</operation>
            <value>PureConnect Cloud</value>
        </filters>
        <label>PCC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureCloud</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Type__c</columns>
        <columns>Genesys_Product_Master__c</columns>
        <columns>Prerequisite_Product__c</columns>
        <columns>Prerequisite_Product2__c</columns>
        <columns>Prerequisite_Product3__c</columns>
        <columns>Active__c</columns>
        <columns>Mandatory__c</columns>
        <columns>Skip_Validation__c</columns>
        <columns>Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quote_Type__c</field>
            <operation>equals</operation>
            <value>PureCloud</value>
        </filters>
        <label>PureCloud</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureConnect_On_Premise</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Mandatory__c</columns>
        <columns>Order_Type__c</columns>
        <columns>Tier__c</columns>
        <columns>Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Quote_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quote_Type__c</field>
            <operation>equals</operation>
            <value>PureConnect On Premise</value>
        </filters>
        <label>PureConnect On Premise</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PureEngage_Cloud</fullName>
        <columns>NAME</columns>
        <columns>Genesys_Product_Master__c</columns>
        <columns>Prerequisite_Product__c</columns>
        <columns>Prerequisite_Product2__c</columns>
        <columns>Prerequisite_Product3__c</columns>
        <columns>Prerequisite_Product_4__c</columns>
        <columns>Prerequisite_Product_5__c</columns>
        <columns>Prerequisite_Product_6__c</columns>
        <columns>Active__c</columns>
        <columns>Mandatory__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quote_Type__c</field>
            <operation>equals</operation>
            <value>PureEngage Cloud</value>
        </filters>
        <label>PureEngage Cloud</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Prerequisite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prerequisites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>